--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,8 @@
+copyright = "This work by Alper Çelik is licensed under Attribution 4.0 International. To view a copy of this license, visit http://creativecommons.org/licenses/by/4.0/"
 baseURL = 'https://blog.alper-celik.dev/'
 languageCode = 'en-us'
 title = "Alper Çelik's blog"
 theme = "theme"
+[author]
+name = "Alper Çelik"
+email = "dev.alpercelik@gmail.com"
